--- a/rozwiazania.html
+++ b/rozwiazania.html
@@ -1,116 +1,85 @@
 <!DOCTYPE html>
-<html lang="pl" class="scroll-smooth">
+<html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rozwiązania - Baltic Digital Institute</title>
-    <meta name="description" content="Odkryj nasze strumienie wartości: wdrożenia systemów AI, badania i certyfikację oraz programy edukacyjne w zakresie kompetencji cyfrowych.">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Geist+Sans:wght@700;900&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        'baltic-navy': '#0A192F',
-                        'dark-steel': '#112240',
-                        'cyber-turq': '#64FFDA',
-                        'steel-gray': '#8892B0',
-                        'white': '#FFFFFF',
-                    },
-                    fontFamily: {
-                        sans: 'Lato', 'sans-serif',
-                        heading:'Geist Sans', 'sans-serif';
-                    }
-                }
-            }
-        }
-    </script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rozwiązania - Baltic Digital Institute</title>
+  <link href="dist/output.css" rel="stylesheet">
 </head>
 <body class="antialiased bg-baltic-navy text-white font-sans">
 
-    <header class="container mx-auto px-6 py-6 flex justify-between items-center">
-        <div>
-            <a href="index.html" aria-label="Strona główna Baltic Digital Institute">
-                <svg width="95" height="36" viewBox="0 0 95 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <text x="0" y="30" font-family="Geist Sans, sans-serif" font-weight="900" font-size="34" fill="#FFFFFF">BD</text>
-                    <text x="73" y="30" font-family="Geist Sans, sans-serif" font-weight="900" font-size="34" fill="#FFFFFF">i</text>
-                    <rect y="16" width="86" height="3" fill="#64FFDA"/>
-                    <rect x="78" y="5" width="8" height="8" fill="#64FFDA"/>
-                </svg>
-            </a>
-        </div>
-        <nav class="hidden md:flex space-x-8 items-center">
-            <a href="rozwiazania.html" class="text-cyber-turq">Rozwiązania</a>
-            <a href="o-nas.html" class="hover:text-cyber-turq transition-colors">O Nas</a>
-            <a href="kontakt.html" class="hover:text-cyber-turq transition-colors">Kontakt</a>
-            <a href="kontakt.html" class="border border-cyber-turq text-cyber-turq px-4 py-2 rounded hover:bg-cyber-turq hover:text-baltic-navy transition-colors font-bold">
-                Skonsultuj Projekt
-            </a>
-        </nav>
-        <div class="md:hidden">
-            <button class="text-white focus:outline-none">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
-            </button>
-        </div>
-    </header>
+  <!-- HEADER -->
+  <header class="bg-dark-steel shadow-md fixed w-full z-20">
+    <div class="max-w-7xl mx-auto px-6 flex justify-between items-center h-16">
+      <a href="index.html" class="flex items-center font-heading text-white text-2xl font-bold">BDi</a>
+      <nav class="hidden md:flex space-x-8 items-center">
+        <a href="rozwiazania.html" class="text-cyber-turq">Rozwiązania</a>
+        <a href="o-nas.html" class="hover:text-cyber-turq transition">O Nas</a>
+        <a href="kontakt.html" class="hover:text-cyber-turq transition">Kontakt</a>
+      </nav>
+      <!-- Hamburger -->
+      <div class="md:hidden">
+        <button id="menu-button" class="relative w-8 h-8 flex flex-col justify-between items-center group">
+          <span class="block h-1 w-full bg-white rounded transition"></span>
+          <span class="block h-1 w-full bg-white rounded transition"></span>
+          <span class="block h-1 w-full bg-white rounded transition"></span>
+        </button>
+      </div>
+    </div>
+    <!-- MOBILE MENU -->
+    <div id="mobile-menu" class="overflow-hidden max-h-0 opacity-0 transition-all duration-500 ease-in-out md:hidden bg-dark-steel">
+      <a href="rozwiazania.html" class="block px-6 py-3 text-cyber-turq font-bold">Rozwiązania</a>
+      <a href="o-nas.html" class="block px-6 py-3 text-white hover:bg-baltic-navy">O Nas</a>
+      <a href="kontakt.html" class="block px-6 py-3 text-white hover:bg-baltic-navy">Kontakt</a>
+    </div>
+  </header>
 
-    <main class="container mx-auto px-6 py-20">
-        <section class="text-center max-w-4xl mx-auto mb-20">
-            <h1 class="font-heading text-4xl md:text-5xl font-black">Nasze Rozwiązania</h1>
-            <p class="mt-6 text-lg text-steel-gray">Dostarczamy kompleksowe, zintegrowane rozwiązania w trzech kluczowych obszarach, tworząc realną wartość dla biznesu, administracji i społeczeństwa.</p>
-        </section>
+  <!-- MAIN -->
+  <main class="pt-24 container mx-auto px-6">
+    <section class="text-center max-w-4xl mx-auto mb-20">
+      <h1 class="font-heading text-4xl md:text-5xl font-black">Nasze Rozwiązania</h1>
+      <p class="mt-6 text-lg text-steel-gray">Tworzymy rozwiązania oparte na AI i cyberbezpieczeństwie, które odpowiadają na kluczowe wyzwania cyfrowe organizacji.</p>
+    </section>
 
-        <section class="py-10">
-            <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
-                <div class="bg-dark-steel p-8 rounded-lg border border-gray-800 hover:border-cyber-turq transition-colors flex flex-col">
-                    <svg class="w-10 h-10 mb-6 text-cyber-turq" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 16v-2m0-8v-2m0 16V4m6 6l2-2m-2 12l2-2M6 18l-2-2m2-12L4 6m16 6h2M2 12H4m8 8a8 8 0 110-16 8 8 0 010 16z"></path></svg>
-                    <h3 class="font-heading text-2xl font-bold mb-4">Wdrożenia Systemów AI</h3>
-                    <p class="text-steel-gray mb-6 flex-grow">Projektujemy i wdrażamy zautomatyzowane systemy operacyjne oparte na agentach AI, które generują mierzalny wzrost i przewagę konkurencyjną. Nasza usługa R-OaaS (Revenue Operations as a Service) to kompleksowa transformacja procesów sprzedażowych i marketingowych.</p>
-                    <a href="#" class="font-bold text-cyber-turq hover:underline mt-auto">Odkryj R-OaaS &rarr;</a>
-                </div>
-                <div class="bg-dark-steel p-8 rounded-lg border border-gray-800 hover:border-cyber-turq transition-colors flex flex-col">
-                    <svg class="w-10 h-10 mb-6 text-cyber-turq" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"></path></svg>
-                    <h3 class="font-heading text-2xl font-bold mb-4">Badania i Certyfikacja</h3>
-                    <p class="text-steel-gray mb-6 flex-grow">W ramach Baltic AI & Cyber Lab tworzymy standardy i weryfikujemy bezpieczeństwo technologii. Jako przyszła, akredytowana przez PCA jednostka, będziemy certyfikować produkty, usługi i procesy, budując zaufanie do innowacji w regionie.</p>
-                    <a href="#" class="font-bold text-cyber-turq hover:underline mt-auto">Dowiedz się więcej &rarr;</a>
-                </div>
-                <div class="bg-dark-steel p-8 rounded-lg border border-gray-800 hover:border-cyber-turq transition-colors flex flex-col">
-                    <svg class="w-10 h-10 mb-6 text-cyber-turq" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 14l9-5-9-5-9 5 9 5z"></path><path d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222 4 2.222V20M1 12l5.373 2.986M17.627 14.986L23 12"></path></svg>
-                    <h3 class="font-heading text-2xl font-bold mb-4">Edukacja i Kompetencje</h3>
-                    <p class="text-steel-gray mb-6 flex-grow">Budujemy kompetencje przyszłości. Oferujemy akredytowane szkolenia w ramach Bazy Usług Rozwojowych (BUR) oraz realizujemy programy grantowe, przygotowując kadry do efektywnej i etycznej pracy z nowymi technologiami.</p>
-                    <a href="#" class="font-bold text-cyber-turq hover:underline mt-auto">Zobacz ofertę szkoleń &rarr;</a>
-                </div>
-            </div>
-        </section>
-    </main>
+    <section class="grid md:grid-cols-3 gap-12 max-w-6xl mx-auto">
+      <div class="bg-dark-steel p-6 rounded-lg">
+        <h2 class="font-heading text-2xl font-bold mb-4">AI dla Biznesu</h2>
+        <p class="text-steel-gray mb-4">Systemy automatyzacji, analityka predykcyjna i inteligentne algorytmy wspierające decyzje.</p>
+        <a href="#" class="text-cyber-turq hover:underline">Dowiedz się więcej →</a>
+      </div>
+      <div class="bg-dark-steel p-6 rounded-lg">
+        <h2 class="font-heading text-2xl font-bold mb-4">Cyberbezpieczeństwo</h2>
+        <p class="text-steel-gray mb-4">Rozwiązania ochronne, audyty bezpieczeństwa i monitoring w czasie rzeczywistym.</p>
+        <a href="#" class="text-cyber-turq hover:underline">Dowiedz się więcej →</a>
+      </div>
+      <div class="bg-dark-steel p-6 rounded-lg">
+        <h2 class="font-heading text-2xl font-bold mb-4">Edukacja i Wsparcie</h2>
+        <p class="text-steel-gray mb-4">Szkolenia, warsztaty i doradztwo, które wzmacniają kompetencje cyfrowe zespołów.</p>
+        <a href="#" class="text-cyber-turq hover:underline">Dowiedz się więcej →</a>
+      </div>
+    </section>
+  </main>
 
-    <footer class="bg-dark-steel mt-20">
-        <div class="container mx-auto px-6 py-12">
-            <div class="md:flex md:justify-between items-center text-center md:text-left">
-                <div class="mb-6 md:mb-0">
-                     <a href="index.html" aria-label="Strona główna Baltic Digital Institute">
-                        <svg width="95" height="36" viewBox="0 0 95 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <text x="0" y="30" font-family="Geist Sans, sans-serif" font-weight="900" font-size="34" fill="#FFFFFF">BD</text>
-                            <text x="73" y="30" font-family="Geist Sans, sans-serif" font-weight="900" font-size="34" fill="#FFFFFF">i</text>
-                            <rect y="16" width="86" height="3" fill="#64FFDA"/>
-                            <rect x="78" y="5" width="8" height="8" fill="#64FFDA"/>
-                        </svg>
-                    </a>
-                </div>
-                <div class="flex justify-center space-x-6 text-steel-gray">
-                    <a href="rozwiazania.html" class="text-cyber-turq">Rozwiązania</a>
-                    <a href="o-nas.html" class="hover:text-cyber-turq transition-colors">O Nas</a>
-                    <a href="kontakt.html" class="hover:text-cyber-turq transition-colors">Kontakt</a>
-                </div>
-            </div>
-            <div class="mt-8 border-t border-gray-800 pt-8 text-center text-sm text-steel-gray">
-                <p>&copy; 2025 Baltic Digital Institute. Wszelkie prawa zastrzeżone.</p>
-            </div>
-        </div>
-    </footer>
+  <!-- FOOTER -->
+  <footer class="bg-dark-steel mt-20">
+    <div class="max-w-7xl mx-auto px-6 py-12 text-center text-steel-gray text-sm">
+      <p>&copy; 2025 Baltic Digital Institute. Wszelkie prawa zastrzeżone.</p>
+    </div>
+  </footer>
 
+  <script>
+    const menuButton = document.getElementById("menu-button");
+    const mobileMenu = document.getElementById("mobile-menu");
+    menuButton.addEventListener("click", () => {
+      mobileMenu.classList.toggle("max-h-96");
+      mobileMenu.classList.toggle("opacity-100");
+      menuButton.classList.toggle("open");
+    });
+  </script>
+  <style>
+    #menu-button.open span:nth-child(1) { transform: rotate(45deg) translate(5px, 5px); }
+    #menu-button.open span:nth-child(2) { opacity: 0; }
+    #menu-button.open span:nth-child(3) { transform: rotate(-45deg) translate(5px, -5px); }
+  </style>
 </body>
 </html>
