--- a/kontakt.html
+++ b/kontakt.html
@@ -1,139 +1,96 @@
 <!DOCTYPE html>
-<html lang="pl" class="scroll-smooth">
+<html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontakt - Baltic Digital Institute</title>
-    <meta name="description" content="Skontaktuj się z nami, aby omówić, jak możemy wesprzeć Twoją organizację. Znajdź nasze dane adresowe i rejestrowe.">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Geist+Sans:wght@700;900&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        'baltic-navy': '#0A192F',
-                        'dark-steel': '#112240',
-                        'cyber-turq': '#64FFDA',
-                        'steel-gray': '#8892B0',
-                        'white': '#FFFFFF',
-                    },
-                    fontFamily: {
-                        sans: 'Lato', 'sans-serif',
-                        heading:'Geist Sans', 'sans-serif';
-                    }
-                }
-            }
-        }
-    </script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kontakt - Baltic Digital Institute</title>
+  <link href="dist/output.css" rel="stylesheet">
 </head>
 <body class="antialiased bg-baltic-navy text-white font-sans">
 
-    <header class="container mx-auto px-6 py-6 flex justify-between items-center">
-        <div>
-            <a href="index.html" aria-label="Strona główna Baltic Digital Institute">
-                <svg width="95" height="36" viewBox="0 0 95 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <text x="0" y="30" font-family="Geist Sans, sans-serif" font-weight="900" font-size="34" fill="#FFFFFF">BD</text>
-                    <text x="73" y="30" font-family="Geist Sans, sans-serif" font-weight="900" font-size="34" fill="#FFFFFF">i</text>
-                    <rect y="16" width="86" height="3" fill="#64FFDA"/>
-                    <rect x="78" y="5" width="8" height="8" fill="#64FFDA"/>
-                </svg>
-            </a>
+  <!-- HEADER -->
+  <header class="bg-dark-steel shadow-md fixed w-full z-20">
+    <div class="max-w-7xl mx-auto px-6 flex justify-between items-center h-16">
+      <a href="index.html" class="flex items-center font-heading text-white text-2xl font-bold">BDi</a>
+      <nav class="hidden md:flex space-x-8 items-center">
+        <a href="rozwiazania.html" class="hover:text-cyber-turq transition">Rozwiązania</a>
+        <a href="o-nas.html" class="hover:text-cyber-turq transition">O Nas</a>
+        <a href="kontakt.html" class="text-cyber-turq">Kontakt</a>
+      </nav>
+      <!-- Hamburger -->
+      <div class="md:hidden">
+        <button id="menu-button" class="relative w-8 h-8 flex flex-col justify-between items-center group">
+          <span class="block h-1 w-full bg-white rounded transition"></span>
+          <span class="block h-1 w-full bg-white rounded transition"></span>
+          <span class="block h-1 w-full bg-white rounded transition"></span>
+        </button>
+      </div>
+    </div>
+    <!-- MOBILE MENU -->
+    <div id="mobile-menu" class="overflow-hidden max-h-0 opacity-0 transition-all duration-500 ease-in-out md:hidden bg-dark-steel">
+      <a href="rozwiazania.html" class="block px-6 py-3 text-white hover:bg-baltic-navy">Rozwiązania</a>
+      <a href="o-nas.html" class="block px-6 py-3 text-white hover:bg-baltic-navy">O Nas</a>
+      <a href="kontakt.html" class="block px-6 py-3 text-cyber-turq font-bold">Kontakt</a>
+    </div>
+  </header>
+
+  <!-- MAIN -->
+  <main class="pt-24 container mx-auto px-6">
+    <section class="text-center max-w-4xl mx-auto mb-20">
+      <h1 class="font-heading text-4xl md:text-5xl font-black">Skontaktuj się z Nami</h1>
+      <p class="mt-6 text-lg text-steel-gray">Jesteśmy gotowi, aby omówić, jak możemy wesprzeć Twoją organizację.</p>
+    </section>
+
+    <section class="grid md:grid-cols-2 gap-16 max-w-5xl mx-auto">
+      <!-- Dane kontaktowe -->
+      <div class="bg-dark-steel p-8 rounded-lg">
+        <h2 class="font-heading text-2xl font-bold mb-6">Dane Kontaktowe</h2>
+        <div class="space-y-4 text-steel-gray">
+          <p><strong class="text-white">Adres:</strong><br>ul. Hołdu Pruskiego 6<br>80-322 Gdańsk, Polska</p>
+          <p><strong class="text-white">E-mail:</strong><br><a href="mailto:office@baltic-digital.org" class="hover:text-cyber-turq">office@baltic-digital.org</a></p>
         </div>
-        <nav class="hidden md:flex space-x-8 items-center">
-            <a href="rozwiazania.html" class="hover:text-cyber-turq transition-colors">Rozwiązania</a>
-            <a href="o-nas.html" class="hover:text-cyber-turq transition-colors">O Nas</a>
-            <a href="kontakt.html" class="text-cyber-turq">Kontakt</a>
-            <a href="kontakt.html" class="border border-cyber-turq text-cyber-turq px-4 py-2 rounded hover:bg-cyber-turq hover:text-baltic-navy transition-colors font-bold">
-                Skonsultuj Projekt
-            </a>
-        </nav>
-        <div class="md:hidden">
-            <button class="text-white focus:outline-none">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
-            </button>
-        </div>
-    </header>
+      </div>
+      <!-- Formularz -->
+      <div>
+        <form action="#" method="POST" class="space-y-6">
+          <div>
+            <label for="name" class="block text-sm text-steel-gray">Imię i Nazwisko</label>
+            <input id="name" name="name" type="text" required class="mt-1 block w-full px-3 py-2 bg-dark-steel border border-gray-700 rounded-md focus:ring-cyber-turq focus:border-cyber-turq">
+          </div>
+          <div>
+            <label for="email" class="block text-sm text-steel-gray">E-mail</label>
+            <input id="email" name="email" type="email" required class="mt-1 block w-full px-3 py-2 bg-dark-steel border border-gray-700 rounded-md focus:ring-cyber-turq focus:border-cyber-turq">
+          </div>
+          <div>
+            <label for="message" class="block text-sm text-steel-gray">Wiadomość</label>
+            <textarea id="message" name="message" rows="4" required class="mt-1 block w-full px-3 py-2 bg-dark-steel border border-gray-700 rounded-md focus:ring-cyber-turq focus:border-cyber-turq"></textarea>
+          </div>
+          <div class="text-xs text-steel-gray">
+            Wysyłając wiadomość wyrażasz zgodę na przetwarzanie danych zgodnie z naszą polityką RODO.
+          </div>
+          <button type="submit" class="w-full bg-cyber-turq text-baltic-navy font-bold py-3 px-6 rounded-md text-lg hover:opacity-90 transition">
+            Wyślij
+          </button>
+        </form>
+      </div>
+    </section>
+  </main>
 
-    <main class="container mx-auto px-6 py-20">
-        <section class="text-center max-w-4xl mx-auto mb-20">
-            <h1 class="font-heading text-4xl md:text-5xl font-black">Skontaktuj się z Nami</h1>
-            <p class="mt-6 text-lg text-steel-gray">Jesteśmy gotowi, aby omówić, jak możemy wesprzeć Twoją organizację. Wypełnij formularz lub skontaktuj się z nami bezpośrednio.</p>
-        </section>
+  <!-- FOOTER -->
+  <footer class="bg-dark-steel mt-20">
+    <div class="max-w-7xl mx-auto px-6 py-12 text-center text-steel-gray text-sm">
+      <p>&copy; 2025 Baltic Digital Institute. Wszelkie prawa zastrzeżone.</p>
+    </div>
+  </footer>
 
-        <section class="grid md:grid-cols-2 gap-16 max-w-5xl mx-auto">
-            <div class="bg-dark-steel p-8 rounded-lg">
-                <h2 class="font-heading text-2xl font-bold mb-6">Dane Kontaktowe i Rejestrowe</h2>
-                <div class="space-y-4 text-steel-gray">
-                    <div>
-                        <h3 class="font-bold text-white">Adres Siedziby Operacyjnej:</h3>
-                        <p>ul. Hołdu Pruskiego 6<br>80-322 Gdańsk, Polska</p>
-                    </div>
-                    <div>
-                        <h3 class="font-bold text-white">E-mail:</h3>
-                        <p><a href="mailto:office@baltic-digital.org" class="hover:text-cyber-turq">office@baltic-digital.org</a></p>
-                    </div>
-                    <div>
-                        <h3 class="font-bold text-white">Dane Rejestrowe:</h3>
-                        <p>
-                            Baltic Digital Institute<br>
-                            NIP: 5213869944<br>
-                            KRS: 0000890382
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div>
-                <form action="#" method="POST" class="space-y-6">
-                    <div>
-                        <label for="name" class="block text-sm font-medium text-steel-gray">Imię i Nazwisko</label>
-                        <input type="text" name="name" id="name" required class="mt-1 block w-full px-3 py-2 bg-dark-steel border border-gray-700 rounded-md shadow-sm focus:outline-none focus:ring-cyber-turq focus:border-cyber-turq">
-                    </div>
-                    <div>
-                        <label for="email" class="block text-sm font-medium text-steel-gray">Adres E-mail</label>
-                        <input type="email" name="email" id="email" required class="mt-1 block w-full px-3 py-2 bg-dark-steel border border-gray-700 rounded-md shadow-sm focus:outline-none focus:ring-cyber-turq focus:border-cyber-turq">
-                    </div>
-                    <div>
-                        <label for="message" class="block text-sm font-medium text-steel-gray">Wiadomość</label>
-                        <textarea name="message" id="message" rows="4" required class="mt-1 block w-full px-3 py-2 bg-dark-steel border border-gray-700 rounded-md shadow-sm focus:outline-none focus:ring-cyber-turq focus:border-cyber-turq"></textarea>
-                    </div>
-                    <div class="pt-2">
-                        <button type="submit" class="w-full bg-cyber-turq text-baltic-navy font-bold py-3 px-6 rounded-md text-lg hover:opacity-90 transition-opacity">
-                            Wyślij Wiadomość
-                        </button>
-                    </div>
-                    <p class="text-xs text-steel-gray text-center pt-2">Wysyłając formularz, wyrażasz zgodę na przetwarzanie Twoich danych osobowych przez Baltic Digital Institute w celu obsługi zapytania. Administratorem danych jest Baltic Digital Institute. Masz pełne prawo dostępu do swoich danych.</p>
-                </form>
-            </div>
-        </section>
-    </main>
-
-    <footer class="bg-dark-steel mt-20">
-        <div class="container mx-auto px-6 py-12">
-            <div class="md:flex md:justify-between items-center text-center md:text-left">
-                <div class="mb-6 md:mb-0">
-                     <a href="index.html" aria-label="Strona główna Baltic Digital Institute">
-                        <svg width="95" height="36" viewBox="0 0 95 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <text x="0" y="30" font-family="Geist Sans, sans-serif" font-weight="900" font-size="34" fill="#FFFFFF">BD</text>
-                            <text x="73" y="30" font-family="Geist Sans, sans-serif" font-weight="900" font-size="34" fill="#FFFFFF">i</text>
-                            <rect y="16" width="86" height="3" fill="#64FFDA"/>
-                            <rect x="78" y="5" width="8" height="8" fill="#64FFDA"/>
-                        </svg>
-                    </a>
-                </div>
-                <div class="flex justify-center space-x-6 text-steel-gray">
-                    <a href="rozwiazania.html" class="hover:text-cyber-turq transition-colors">Rozwiązania</a>
-                    <a href="o-nas.html" class="hover:text-cyber-turq transition-colors">O Nas</a>
-                    <a href="kontakt.html" class="text-cyber-turq">Kontakt</a>
-                </div>
-            </div>
-            <div class="mt-8 border-t border-gray-800 pt-8 text-center text-sm text-steel-gray">
-                <p>&copy; 2025 Baltic Digital Institute. Wszelkie prawa zastrzeżone.</p>
-            </div>
-        </div>
-    </footer>
-
-</body>
-</html>
+  <script>
+    const menuButton = document.getElementById("menu-button");
+    const mobileMenu = document.getElementById("mobile-menu");
+    menuButton.addEventListener("click", () => {
+      mobileMenu.classList.toggle("max-h-96");
+      mobileMenu.classList.toggle("opacity-100");
+      menuButton.classList.toggle("open");
+    });
+  </script>
+  <style>
+    #menu-button.open span:nth-child(1) { transform: rotate(45deg) translate
