--- a/o-nas.html
+++ b/o-nas.html
@@ -1,47 +1,113 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>O nas — Baltic Digital Institute</title>
+  <!-- Tailwind CSS przez CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-  <style>body{font-family:'Lato',sans-serif}</style>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    body { font-family: 'Inter', 'Lato', sans-serif; }
+  </style>
 </head>
-<body class="bg-[#0A192F] text-white min-h-screen">
-  <header class="bg-[#0A192F] fixed w-full z-50">
-    <nav class="max-w-6xl mx-auto flex items-center justify-between p-4">
-      <a href="index.html" class="text-xl font-bold text-[#00F6D2]">BDI</a>
-      <ul class="hidden md:flex space-x-6">
-        <li><a href="index.html" class="hover:text-[#00F6D2]">Start</a></li>
-        <li><a href="o-nas.html" class="hover:text-[#00F6D2]">O nas</a></li>
-        <li><a href="rozwiazania.html" class="hover:text-[#00F6D2]">Rozwiązania</a></li>
-        <li><a href="kontakt.html" class="hover:text-[#00F6D2]">Kontakt</a></li>
-      </ul>
-      <button id="menu-btn" class="md:hidden text-2xl">☰</button>
-    </nav>
-    <div id="mobile-menu" class="hidden md:hidden bg-[#1F2937]">
-      <a class="block px-4 py-3" href="index.html">Start</a>
-      <a class="block px-4 py-3" href="o-nas.html">O nas</a>
-      <a class="block px-4 py-3" href="rozwiazania.html">Rozwiązania</a>
-      <a class="block px-4 py-3" href="kontakt.html">Kontakt</a>
+<body class="bg-[#0A192F] text-white">
+
+  <!-- HEADER -->
+  <header class="flex items-center justify-between px-6 py-4 bg-[#0A192F]/90 fixed w-full top-0 z-50">
+    <div class="flex items-center space-x-3">
+      <img src="assets/svg/Logo main.svg" alt="BDI Logo" class="h-10">
+      <span class="text-xl font-bold">Baltic Digital Institute</span>
     </div>
+    <nav class="hidden md:flex space-x-6 text-white font-medium">
+      <a href="index.html" class="hover:text-[#64FFDA]">Strona główna</a>
+      <a href="o-nas.html" class="hover:text-[#64FFDA]">O nas</a>
+      <a href="rozwiazania.html" class="hover:text-[#64FFDA]">Rozwiązania</a>
+      <a href="kontakt.html" class="hover:text-[#64FFDA]">Kontakt</a>
+    </nav>
+    <!-- Hamburger -->
+    <button id="menu-btn" class="md:hidden flex flex-col space-y-1">
+      <span class="block w-6 h-0.5 bg-white"></span>
+      <span class="block w-6 h-0.5 bg-white"></span>
+      <span class="block w-6 h-0.5 bg-white"></span>
+    </button>
   </header>
 
-  <main class="pt-24 max-w-4xl mx-auto px-4 py-16">
-    <h1 class="text-3xl font-bold mb-4">O nas</h1>
-    <p class="text-gray-300 mb-4">Baltic Digital Institute to centrum innowacji w obszarze sztucznej inteligencji i cyberbezpieczeństwa.</p>
-    <p class="text-gray-300">Naszą misją jest tworzenie rozwiązań, które realnie wzmacniają bezpieczeństwo cyfrowe i rozwój biznesu.</p>
-  </main>
+  <!-- MOBILE MENU -->
+  <div id="mobile-menu" class="hidden md:hidden fixed top-16 left-0 w-full bg-[#0A192F]/95 text-center space-y-4 py-6">
+    <a href="index.html" class="block text-lg hover:text-[#64FFDA]">Strona główna</a>
+    <a href="o-nas.html" class="block text-lg hover:text-[#64FFDA]">O nas</a>
+    <a href="rozwiazania.html" class="block text-lg hover:text-[#64FFDA]">Rozwiązania</a>
+    <a href="kontakt.html" class="block text-lg hover:text-[#64FFDA]">Kontakt</a>
+  </div>
 
-  <footer class="bg-[#1F2937] text-center py-6 mt-12">
-    <p class="text-gray-400 text-sm">© 2025 Baltic Digital Institute</p>
+  <!-- HERO -->
+  <section class="relative h-72 flex items-center justify-center text-center bg-[#0A192F]">
+    <h1 class="text-4xl md:text-5xl font-bold">O nas</h1>
+  </section>
+
+  <!-- MISJA -->
+  <section class="py-16 px-6 bg-[#0A192F] text-center">
+    <h2 class="text-3xl font-bold mb-6 text-[#64FFDA]">Nasza Misja</h2>
+    <p class="max-w-3xl mx-auto text-gray-300 leading-relaxed">
+      Budujemy cyfrową odporność Europy, łącząc naukę, biznes i sektor publiczny. 
+      Naszą misją jest rozwój sztucznej inteligencji, cyberbezpieczeństwa i odpowiedzialnej transformacji cyfrowej.
+    </p>
+  </section>
+
+  <!-- WIZJA -->
+  <section class="py-16 px-6 bg-[#0F2238] text-center">
+    <h2 class="text-3xl font-bold mb-6 text-[#64FFDA]">Nasza Wizja</h2>
+    <p class="max-w-3xl mx-auto text-gray-300 leading-relaxed">
+      Europa jako lider innowacji cyfrowych, opartych na etyce, bezpieczeństwie i zaufaniu społecznym. 
+      Chcemy być mostem pomiędzy nowoczesnymi technologiami a wartościami demokratycznymi.
+    </p>
+  </section>
+
+  <!-- WARTOŚCI -->
+  <section class="py-16 px-6 bg-[#0A192F] text-center">
+    <h2 class="text-3xl font-bold mb-12 text-[#64FFDA]">Nasze Wartości</h2>
+    <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 max-w-6xl mx-auto">
+      <div class="p-6 bg-[#0F2238] rounded-xl shadow-lg">
+        <h3 class="text-xl font-semibold mb-4">Odpowiedzialność</h3>
+        <p class="text-gray-300 text-sm">
+          Działamy z myślą o dobru publicznym i zrównoważonym rozwoju.
+        </p>
+      </div>
+      <div class="p-6 bg-[#0F2238] rounded-xl shadow-lg">
+        <h3 class="text-xl font-semibold mb-4">Bezpieczeństwo</h3>
+        <p class="text-gray-300 text-sm">
+          Cyberodporność i ochrona danych są fundamentem wszystkich działań.
+        </p>
+      </div>
+      <div class="p-6 bg-[#0F2238] rounded-xl shadow-lg">
+        <h3 class="text-xl font-semibold mb-4">Innowacyjność</h3>
+        <p class="text-gray-300 text-sm">
+          Łączymy badania naukowe i praktykę rynkową w unikalny sposób.
+        </p>
+      </div>
+      <div class="p-6 bg-[#0F2238] rounded-xl shadow-lg">
+        <h3 class="text-xl font-semibold mb-4">Transparentność</h3>
+        <p class="text-gray-300 text-sm">
+          Wierzymy w otwartą komunikację i uczciwe partnerstwa.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="bg-[#0A192F]/90 py-6 text-center text-gray-400 text-sm">
+    © 2025 Baltic Digital Institute. Wszelkie prawa zastrzeżone.
   </footer>
 
+  <!-- Script menu -->
   <script>
-    const btn = document.getElementById('menu-btn');
-    const mobile = document.getElementById('mobile-menu');
-    btn.addEventListener('click', () => mobile.classList.toggle('hidden'));
+    const menuBtn = document.getElementById('menu-btn');
+    const mobileMenu = document.getElementById('mobile-menu');
+    menuBtn.addEventListener('click', () => {
+      mobileMenu.classList.toggle('hidden');
+    });
   </script>
 </body>
 </html>
