--- a/rozwiazania.html
+++ b/rozwiazania.html
@@ -1,59 +1,83 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rozwiązania — Baltic Digital Institute</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-  <style>body{font-family:'Lato',sans-serif}</style>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <style> body { font-family: 'Inter', 'Lato', sans-serif; } </style>
 </head>
-<body class="bg-[#0A192F] text-white min-h-screen">
-  <header class="bg-[#0A192F] fixed w-full z-50">
-    <nav class="max-w-6xl mx-auto flex items-center justify-between p-4">
-      <a href="index.html" class="text-xl font-bold text-[#00F6D2]">BDI</a>
-      <ul class="hidden md:flex space-x-6">
-        <li><a href="index.html" class="hover:text-[#00F6D2]">Start</a></li>
-        <li><a href="o-nas.html" class="hover:text-[#00F6D2]">O nas</a></li>
-        <li><a href="rozwiazania.html" class="hover:text-[#00F6D2]">Rozwiązania</a></li>
-        <li><a href="kontakt.html" class="hover:text-[#00F6D2]">Kontakt</a></li>
-      </ul>
-      <button id="menu-btn" class="md:hidden text-2xl">☰</button>
-    </nav>
-    <div id="mobile-menu" class="hidden md:hidden bg-[#1F2937]">
-      <a class="block px-4 py-3" href="index.html">Start</a>
-      <a class="block px-4 py-3" href="o-nas.html">O nas</a>
-      <a class="block px-4 py-3" href="rozwiazania.html">Rozwiązania</a>
-      <a class="block px-4 py-3" href="kontakt.html">Kontakt</a>
+<body class="bg-[#0A192F] text-white">
+
+  <!-- HEADER -->
+  <header class="flex items-center justify-between px-6 py-4 bg-[#0A192F]/90 fixed w-full top-0 z-50">
+    <div class="flex items-center space-x-3">
+      <img src="assets/svg/Logo main.svg" alt="BDI Logo" class="h-10">
+      <span class="text-xl font-bold">Baltic Digital Institute</span>
     </div>
+    <nav class="hidden md:flex space-x-6 text-white font-medium">
+      <a href="index.html" class="hover:text-[#64FFDA]">Strona główna</a>
+      <a href="o-nas.html" class="hover:text-[#64FFDA]">O nas</a>
+      <a href="rozwiazania.html" class="hover:text-[#64FFDA]">Rozwiązania</a>
+      <a href="kontakt.html" class="hover:text-[#64FFDA]">Kontakt</a>
+    </nav>
+    <button id="menu-btn" class="md:hidden flex flex-col space-y-1">
+      <span class="block w-6 h-0.5 bg-white"></span>
+      <span class="block w-6 h-0.5 bg-white"></span>
+      <span class="block w-6 h-0.5 bg-white"></span>
+    </button>
   </header>
 
-  <main class="pt-24 max-w-6xl mx-auto px-4 py-16">
-    <h1 class="text-3xl font-bold mb-6">Rozwiązania</h1>
-    <div class="grid md:grid-cols-3 gap-6">
-      <div class="bg-[#1F2937] p-6 rounded-lg">
-        <h3 class="text-xl font-bold text-[#00F6D2] mb-2">AI Solutions</h3>
-        <p class="text-gray-300">Nowoczesne algorytmy i modele AI wspierające biznes.</p>
-      </div>
-      <div class="bg-[#1F2937] p-6 rounded-lg">
-        <h3 class="text-xl font-bold text-[#00F6D2] mb-2">Cyberbezpieczeństwo</h3>
-        <p class="text-gray-300">Strategie i narzędzia ochrony danych.</p>
-      </div>
-      <div class="bg-[#1F2937] p-6 rounded-lg">
-        <h3 class="text-xl font-bold text-[#00F6D2] mb-2">Innowacje</h3>
-        <p class="text-gray-300">Projekty badawczo-wdrożeniowe.</p>
-      </div>
-    </div>
-  </main>
+  <!-- MOBILE MENU -->
+  <div id="mobile-menu" class="hidden md:hidden fixed top-16 left-0 w-full bg-[#0A192F]/95 text-center space-y-4 py-6">
+    <a href="index.html" class="block text-lg hover:text-[#64FFDA]">Strona główna</a>
+    <a href="o-nas.html" class="block text-lg hover:text-[#64FFDA]">O nas</a>
+    <a href="rozwiazania.html" class="block text-lg hover:text-[#64FFDA]">Rozwiązania</a>
+    <a href="kontakt.html" class="block text-lg hover:text-[#64FFDA]">Kontakt</a>
+  </div>
 
-  <footer class="bg-[#1F2937] text-center py-6 mt-12">
-    <p class="text-gray-400 text-sm">© 2025 Baltic Digital Institute</p>
+  <!-- HERO -->
+  <section class="relative h-72 flex items-center justify-center text-center bg-[#0A192F]">
+    <h1 class="text-4xl md:text-5xl font-bold">Nasze Rozwiązania</h1>
+  </section>
+
+  <!-- FILARY -->
+  <section class="py-20 px-6 max-w-6xl mx-auto grid md:grid-cols-3 gap-10">
+    <div class="p-6 bg-[#0F2238] rounded-xl shadow-lg hover:scale-105 transition-transform">
+      <h2 class="text-2xl font-bold text-[#64FFDA] mb-4">Sztuczna Inteligencja</h2>
+      <p class="text-gray-300 leading-relaxed text-sm">
+        Tworzymy rozwiązania oparte na AI, które wspierają biznes i sektor publiczny. 
+        Od analizy danych po modele uczenia maszynowego – wdrażamy praktyczne innowacje.
+      </p>
+    </div>
+    <div class="p-6 bg-[#0F2238] rounded-xl shadow-lg hover:scale-105 transition-transform">
+      <h2 class="text-2xl font-bold text-[#64FFDA] mb-4">Cyberbezpieczeństwo</h2>
+      <p class="text-gray-300 leading-relaxed text-sm">
+        Budujemy odporność cyfrową organizacji. 
+        Nasze programy i audyty pomagają chronić dane, procesy i infrastrukturę krytyczną.
+      </p>
+    </div>
+    <div class="p-6 bg-[#0F2238] rounded-xl shadow-lg hover:scale-105 transition-transform">
+      <h2 class="text-2xl font-bold text-[#64FFDA] mb-4">Transformacja Cyfrowa</h2>
+      <p class="text-gray-300 leading-relaxed text-sm">
+        Wspieramy instytucje w przechodzeniu na nowoczesne technologie. 
+        Łączymy wiedzę ekspercką i praktyczne doświadczenie w cyfrowej modernizacji.
+      </p>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="bg-[#0A192F]/90 py-6 text-center text-gray-400 text-sm">
+    © 2025 Baltic Digital Institute. Wszelkie prawa zastrzeżone.
   </footer>
 
   <script>
-    const btn = document.getElementById('menu-btn');
-    const mobile = document.getElementById('mobile-menu');
-    btn.addEventListener('click', () => mobile.classList.toggle('hidden'));
+    const menuBtn = document.getElementById('menu-btn');
+    const mobileMenu = document.getElementById('mobile-menu');
+    menuBtn.addEventListener('click', () => {
+      mobileMenu.classList.toggle('hidden');
+    });
   </script>
 </body>
 </html>
